[tool.poetry]
name = "gcp_firewall_ip_block"
version = "0.1.0"
description = ""
authors = ["ucpr <contact@ucpr.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
